# tidre-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data-gen.py
.github/workflows/: assets.yml  test.yml
src/: main.cpp
